--- a/templates/article.html
+++ b/templates/article.html
@@ -145,8 +145,7 @@
             </div>
         </div>        
     <div class="site-info">
-        Xinhai (Sean) Zou. <br/>
-        This website does not contain any JavaScript code. <br/>
+        By <a href="https://seanzou.com" target="_blank">Xinhai (Sean) Zou.
     </div>
 </body>
 </html>
