--- a/server/templates/article.html
+++ b/server/templates/article.html
@@ -311,6 +311,8 @@
                     updated: container.dataset.updated,
                     summary: container.dataset.summary,
                     CN_summary: container.dataset.cnSummary,
+                    tags: '',
+                    note: '',
                 });
                 button.classList.add('active');
                 button.textContent = '已收藏';
