--- a/server/templates/article.html
+++ b/server/templates/article.html
@@ -174,7 +174,7 @@
         <div class="filter-container" id="filters">
             <!-- JavaScript将在这里动态添加其他选项 -->
         </div>
-        <p><a href="/">Index</a> | <a href="/calendar">Calendar</a> | <a href="/favorites">My Favorites</a></p>
+        <p><a href="/">Index</a> | <a href="/calendar">Calendar</a> | <a href="/favorites">My Favorites</a> | <a href="/archive">Archive</a> | <a href="/storage">Storage</a></p>
     </div>
         <div class="content">
             <div class="inner-content">
@@ -313,6 +313,7 @@
                     CN_summary: container.dataset.cnSummary,
                     tags: '',
                     note: '',
+                    archived: false,
                 });
                 button.classList.add('active');
                 button.textContent = '已收藏';
